[gd_scene load_steps=12 format=2]

[ext_resource path="res://OQ_Toolkit/OQ_UI2D/theme/Roboto-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/theme/RobotoMono-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://game/Pause_Panel.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.14902, 0.14902, 0.14902, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.270588, 0.270588, 0.270588, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[node name="Pause_Panel" type="Panel"]
margin_right = 640.0
margin_bottom = 576.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mainmenu" type="Button" parent="."]
margin_left = 216.0
margin_top = 480.0
margin_right = 424.0
margin_bottom = 544.0
theme = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Main Menu"

[node name="restart" type="Button" parent="."]
margin_left = 216.0
margin_top = 400.0
margin_right = 424.0
margin_bottom = 464.0
theme = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Restart"

[node name="continue" type="Button" parent="."]
margin_left = 216.0
margin_top = 320.0
margin_right = 424.0
margin_bottom = 384.0
theme = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 64.0
margin_right = 624.0
margin_bottom = 312.0
theme = SubResource( 8 )
text = "Current song:
test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause" type="Label" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 624.0
margin_bottom = 59.0
theme = SubResource( 8 )
text = "Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="mainmenu" to="." method="_on_mainmenu_button_up"]
[connection signal="button_up" from="restart" to="." method="_on_restart_button_up"]
[connection signal="button_up" from="continue" to="." method="_on_continue_button_up"]
